# boltz2_from_scratch

./: .gitignore  README.md  pyproject.toml
configs/: small.yaml
scripts/: overfit_one.py  run_inference.py
src/boltz2/: __init__.py  config.py  inference.py  losses.py  model.py  train.py
src/boltz2/data/: __init__.py  dataset.py  fake.py  features.py  parser.py  tokens.py
src/boltz2/modules/: __init__.py  affinity.py  atom_attention.py  diffusion.py  heads.py  msa.py  pairformer.py  primitives.py  triangle.py
tests/: conftest.py  test_affinity.py  test_atom_attention.py  test_confidence.py  test_diffusion.py  test_overfit.py  test_pairformer.py  test_primitives.py  test_triangle.py
