[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boltz2"
version = "0.0.1"
description = "A from-scratch PyTorch reimplementation of Boltz-2"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
